Add endpoint to query todo items
